--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "axios": "^0.26.1",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-modalize": "^2.0.13",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
